# FlightScope

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FlightScope.pro  LICENSE  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  build.bat  build_cmake.bat  create_portable.bat  run_flightscope.bat
FlightScope/: CMakeLists.txt  LinkInterface.h  healthmodel.cpp  healthmodel.h  mainwindow.cpp  mainwindow.h  mavlinkrouter.cpp  mavlinkrouter.h  vehiclemodel.cpp  vehiclemodel.h
FlightScope/tst_smoketest/: CMakeLists.txt  tst_smoketest.cpp
android/: AndroidManifest.xml
android/res/values/: strings.xml  styles.xml
ios/: Info.plist
resources/: resources.qrc
resources/qml/: MapView.qml  PrimaryFlightDisplay.qml
resources/styles/: cupertino.qss  material.qss  material_mobile.qss  material_tablet.qss
src/: main.cpp
src/comm/: commandbus.cpp  commandbus.h  linkinterface.h  linkmanager.cpp  linkmanager.h  mavlinkrouter.cpp  mavlinkrouter.h  udplink.cpp  udplink.h
src/models/: geofencemodel.cpp  geofencemodel.h  healthmodel.cpp  healthmodel.h  missionmodel.cpp  missionmodel.h  vehiclemodel.cpp  vehiclemodel.h  waypoint.cpp  waypoint.h
src/ui/: commandeditordialog.cpp  commandeditordialog.h  compasswidget.cpp  compasswidget.h  connectdialog.cpp  connectdialog.h  hudwidget.cpp  hudwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h  missioneditor.cpp  missioneditor.h
tests/: test_main.cpp  tests.pro
